# ruimtelijke-simulatie

./: .gitignore  CLAUDE.md  README.md
src/backend/: .env  .env.example  pyproject.toml
src/backend/app/: config.py  main.py
src/backend/app/routers/: agent.py  health.py  insight.py  scenario.py  som.py  trajectory.py  trend.py
src/backend/app/services/: agent_service.py  agent_tools.py  dataset.py  ollama_service.py  som_service.py
src/backend/data/: data
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.vue
src/frontend/src/components/chat/: ChatPanel.vue
src/frontend/src/components/map/: MapLegend.vue
src/frontend/src/composables/: useInsight.ts  useMap.ts  useSOM.ts
